project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-project
  template:
    metadata:
      labels:
        app: dwk-project
    spec:
      containers:
        - name: dwk-project
          image: makeri89/dwk-project:0.3
