project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-project-svc
spec:
  type: NodePort
  selector:
    app: dwk-project
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3001
